Fix: Footer visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -13,16 +14,17 @@ body {
 }
 
 main {
-    flex: 1 0 auto;
     display: flex;
+    flex: 1 0 auto;
     width: 100%;
+    height: 400px;
+    height: auto;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 header{
-    font-size: 40px;
     flex-direction: column;
     background: rgb(45, 165, 165);
     width: 100%;
@@ -31,6 +33,10 @@ header{
     color: aliceblue;
     justify-content: center;
     align-content: center;
+}
+
+h1{
+    font-size: 40px;
 }
 
 
@@ -48,8 +54,7 @@ footer{
     width: 100%;
     padding: 10px;
     background: rgb(45, 165, 165);
-
-
+    display: fixed;
 }
 
 a {
